2007-09-13  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_send_event):
	Push OOB events downstream when we get them in send_event. This allows
	the application to insert events in the pipeline.
	Add some more comments.

2007-09-13  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstbin.c: (gst_bin_class_init), (clear_queue),
	(do_bin_latency), (gst_bin_change_state_func):
	* gst/gstpipeline.c: (gst_pipeline_change_state):
	Move latency query from GstPipeline to GstBin so that we can also
	use it when async-handling is enabled on bins.

2007-09-13  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_query_latency),
	(gst_base_src_do_sync), (gst_base_src_change_state):
	Update docs.
	Clean up the timestamping and syncing code for pseudo live sources.

2007-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Steve Fink  <sphink gmail com>

	* docs/manual/appendix-checklist.xml:
	  Mention less -R switch in the section about debug output (#474055).

2007-09-13  Wim Taymans  <wim.taymans@gmail.com>

	* plugins/elements/gstqueue.c: (gst_queue_handle_src_query):
	Queue can latency to the pipeline up to the configured max size in time.
	Report this fact in the latency query.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sebastien Moutte <sebastien at moutte dot net>

	* libs/gst/controller/gstinterpolation.c:
	* libs/gst/controller/gstlfocontrolsource.c:
	Use gst_guint64_to_gdouble() when converting from a uint64 or
	GstClockTime to double to fix the build on win32. Fixes #474371.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstbuffer.c: (gst_buffer_finalize):
	Implement poisoning for GstBuffer if --enable-poisoning is specified.
	When finalizing a buffer the complete struct is filled with 0xff,
	thus making a use of the buffer after the final unref impossible.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>
